--- a/index.html
+++ b/index.html
@@ -205,6 +205,70 @@
 
     <!----section 2 end----->
 
+        <!--------SECTION 3 START--------->
+
+    <section class="lg:px-24 md:px-5 px-3 py-10 pb-20 bg-[#FAFAFA] dark:bg-gray-900">
+        <div class=" grid grid-cols-12 md:space-y-0 space-y-6 space-x-0 lg:space-x-6">
+            <div class="col-span-12 lg:col-span-6 md:p-12 p-3 dark:bg-gray-800 dark:shadow dark:shadow-gray-700  bg-white shadow-lg rounded-2xl">
+                <div class="pb-7 border-b-2">
+                    <h1 class="md:text-4xl text-2xl font-semibold text-[#072125] dark:text-white">What you will learn</h1>
+                </div>
+                <div class="flex md:flex-row flex-col ">
+                    <div class="md:space-y-8">
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto"  src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Database administrator</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Tech support specialist</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">IT specialist</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Systems analyst</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Network engineer</p>
+                        </div>
+                    </div>
+                    <div class="md:space-y-8 md:ml-14">
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto"  src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Database administrator</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Tech support specialist</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">IT specialist</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Systems analyst</p>
+                        </div>
+                        <div class="flex md:gap-4 gap-2 mt-6">
+                            <img class="md:h-10 h-auto" src="./images/Checkmark2.png" alt="">
+                            <p class="section3-text">Network engineer</p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="col-span-12 lg:col-span-6 md:p-12 p-3 dark:bg-gray-800 dark:shadow dark:shadow-gray-700 bg-white shadow-lg rounded-2xl">
+                <img src="./images/IT Support 1.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-------section 3 end-------->
+
 
 
 
