--- a/index.html
+++ b/index.html
@@ -269,7 +269,25 @@
 
     <!-------section 3 end-------->
 
+    <!-------SECTION 4 START------>
 
+    <section class="lg:px-24 md:px-5 px-3 lg:py-20 py-10 bg-white dark:bg-gray-900">
+        <div class="relative">
+            <h1 class="dark:text-white text-[#2D3142] md:text-6xl text-3xl md:leading-snug leading-tight font-bold">There are 5 Courses in this <br> Professional Certificate</h1>
+            <div class="flex md:mt-16 md:space-x-12  gap-3 flex-wrap border-b-2 md:py-12 py-6 border-[#F9CCC7]">
+                    <p class="md:px-8 md:pt-2 md:text-xl text-base rounded-full px-4 md:py-2 py-1 dark:text-[#2D3142] text-[#2D3142] border border-[#232323] dark:border-white  bg-[#00FF84] hover:bg-white hover:dark:text-[#2D3142] transition cursor-pointer">COURSE 1</p>
+                    <p class="section3-tags">Course  2 </p>
+                    <p class="section3-tags">Course  3 </p>
+                    <p class="section3-tags">Course  4 </p>
+                    <p class="section3-tags">Course  5 </p>
+            </div>
+            <div class="lg:absolute right-0  top-0 flex md:items-start justify-center">
+                <img class="md:w-96 w-56" src="./images/Group 238902.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!----section 4 end----->
 
 
 
