--- a/index.html
+++ b/index.html
@@ -874,6 +874,70 @@
 
     <!----------section 9 end----------->
 
+
+        <!-------FOOTER--------->
+
+    <section class="lg:pt-48 py-10 bg-white dark:bg-gray-900">
+        <div class=" w-full relative py-24 lg:pr-40 pr-5 lg:ps-24 ps-5" style="background-image: url(./images/brooke-cagle-g1Kr4Ozfoac-unsplash\ 2.png); background-size: cover; background-repeat: no-repeat;">
+            <div class="md:p-20 p-9 bg-white inline-block rounded-xl">
+                <img class="w-12" src="./images/backtrics.png" alt="">
+                <h1 class="md:text-3xl text-xl dark:text-[#072125] font-semibold text-[#072125] mt-7">I worked in retail and needed to make a <br> change. The certificate is really <br> designed for you to go at your own <br> pace. This is something that anybody <br> can do</h1>
+                <p class="md:text-2xl text-lg  text-[#F9CCC7] font-semibold mt-12">Daniel, IT Support Specialist at Central Community <br> College and Google IT Support Certificate graduate</p>
+            </div>
+        </div>
+        <div class="md:p-16 p-4 grid grid-cols-12">
+            <div class="md:col-span-4 col-span-12">
+                <img src="./images/c4u full logo_2022 1.png" alt="">
+                <p class="md:text-xl text-lg mt-4  text-gray-500 dark:text-white">Level39</p>
+                <p class="md:text-xl text-lg mt-4  text-gray-500 dark:text-white">One Canada Square,</p>
+                <p class="md:text-xl text-lg mt-4  text-gray-500 dark:text-white">Canary Wharf,</p>
+                <p class="md:text-xl text-lg mt-4  text-gray-500 dark:text-white">London</p>
+                <p class="md:text-xl text-lg mt-4  text-gray-500 dark:text-white">E145AB</p>
+            </div>
+            <div class="flex lg:col-span-4 col-span-12 justify-around lg:mt-0 mt-12">
+                <div class="col-span-2">
+                    <h1 class="text-2xl font-bold dark:text-white text-gray-600">Home</h1>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Collaborations</p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Statistics</p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">How It Works </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Testimonials </p>
+                </div>
+                <div class="col-span-2 ps-10">
+                    <h1 class="text-2xl font-bold dark:text-white text-gray-600">About Us</h1>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Who We Are</p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Mission statement </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Our Vision </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">The Team </p>
+                </div>
+            </div>
+
+
+            <div class="flex lg:col-span-4 col-span-12 justify-around lg:mt-0 mt-12">
+                <div class="col-span-2">
+                    <h1 class="text-2xl font-bold dark:text-white text-gray-600">Upskill</h1>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">It Support </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Project Managment </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Data Analysts</p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Ux Design</p>
+                </div>
+                <div class="col-span-2 md:ps-10">
+                    <h1 class="text-2xl font-bold dark:text-white text-gray-600">Contact Us</h1>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Your message </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Email </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Phone number </p>
+                    <p class="md:text-xl text-lg md:mt-6 mt-3  text-gray-500 dark:text-white">Linkedin</p>
+                </div>
+            </div>
+
+        </div>
+        <hr>
+        <div class="md:text-lg text-gray-500 md:px-12 px-5 text-center text-sm">
+            <p class="text-center mt-8">Copyright 2022 Creatives For You LTD</p>
+        </div>
+    </section>
+    
+    <!---------footer end---------->
+
     <script src="script.js"></script>
 </body>
 </html>
