new image add for mistake

--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
         <!-------FOOTER--------->
 
     <section class="lg:pt-48 py-10 bg-white dark:bg-gray-900">
-        <div class=" w-full relative py-24 lg:pr-40 pr-5 lg:ps-24 ps-5 bg-[url('./images/brooke-cagle-g1Kr4Ozfoac-unsplash 2.png')] bg-cover bg-no-repeat">
+        <div class=" w-full relative py-24 lg:pr-40 pr-5 lg:ps-24 ps-5 bg-[url('/images/footer.png')] bg-cover bg-no-repeat">
             <div class="md:p-20 p-9 bg-white inline-block rounded-xl">
                 <img class="w-12" src="./images/backtrics.png" alt="">
                 <h1 class="md:text-3xl text-xl dark:text-[#072125] font-semibold text-[#072125] mt-7">I worked in retail and needed to make a <br> change. The certificate is really <br> designed for you to go at your own <br> pace. This is something that anybody <br> can do</h1>
